terminei a home principal

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <nav id="navBar">
-      <i id="nav-logo" class="fa-solid fa-burger">FOOD</i>
+      <i id="nav-logo" class="fa-solid fa-burger"> FOOD</i>
       <ul id="nav-list">
         <li class="nav-item active"><a href="#inicio">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
@@ -35,5 +35,32 @@
       <button id="btn-mobile" class="btn-default">Peça aqui!<i class='bx bxs-food-menu bx-tada'></i></button>
     </div>
   </header>
+  <main id="content">
+    <section id="home">
+      <div class="shape"></div>
+        <div id="cta">
+          <h1>O sabor vai até <span>você</span></h1>
+          <p class="description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, illum culpa expedita ratione debitis maiores et similique sit.
+          </p>
+          <div id="cta-btns">
+            <a href="#" class="btn-default">Ver cardápio <i class='bx bxs-food-menu bx-tada'></i></a>
+            <a href="tel:+555555555" id="btn-tel"><button class="btn-default"><i class='bx bxs-phone bx-tada'></i> (85) 4002-8922</button></a>
+          </div>
+
+          <div class="social-media-btn">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </div>
+
+        </div>
+      <div id="banner">
+        <img src="img/hero.png" alt="">
+      </div>
+    </section>
+  </main>
 </body>
 </html>
