deixei o menu responsivo e ajustei o header

--- a/index.html
+++ b/index.html
@@ -61,6 +61,110 @@
         <img src="img/hero.png" alt="">
       </div>
     </section>
+
+    <section id="menu">
+      <h2 class="section-title">Cardápio</h2>
+      <h3 class="section-subtitle">Nossos pratos especiais</h3>
+
+      <div id="pratos">
+        <div class="prato">
+          <div class="prato-coracao">
+            <i class='bx bxs-heart bx-tada'></i>
+          </div>
+          <img src="img/dish.png" class="prato-imagem" alt="prato 1">
+          <h3 class="prato-titulo">Lorem ipsum.</h3>
+          <span class="prato-descricao">Lorem ipsum dolor sit amet consectetur harum!</span>
+
+          <div class="prato-avali">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+
+          <div class="prato-valor">
+            <h4>R$20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="prato">
+          <div class="prato-coracao">
+            <i class='bx bxs-heart bx-tada'></i>
+          </div>
+          <img src="img/dish2.png" class="prato-imagem" alt="prato 1">
+          <h3 class="prato-titulo">Lorem ipsum.</h3>
+          <span class="prato-descricao">Lorem ipsum dolor sit amet consectetur harum!</span>
+
+          <div class="prato-avali">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+
+          <div class="prato-valor">
+            <h4>R$20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="prato">
+          <div class="prato-coracao">
+            <i class='bx bxs-heart bx-tada'></i>
+          </div>
+          <img src="img/dish3.png" class="prato-imagem" alt="prato 1">
+          <h3 class="prato-titulo">Lorem ipsum.</h3>
+          <span class="prato-descricao">Lorem ipsum dolor sit amet consectetur harum!</span>
+
+          <div class="prato-avali">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+
+          <div class="prato-valor">
+            <h4>R$20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+
+        <div class="prato">
+          <div class="prato-coracao">
+            <i class='bx bxs-heart bx-tada'></i>
+          </div>
+          <img src="img/dish4.png" class="prato-imagem" alt="prato 1">
+          <h3 class="prato-titulo">Lorem ipsum.</h3>
+          <span class="prato-descricao">Lorem ipsum dolor sit amet consectetur harum!</span>
+
+          <div class="prato-avali">
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+            <i class="fa-solid fa-star"></i>
+          </div>
+
+          <div class="prato-valor">
+            <h4>R$20,00</h4>
+            <button class="btn-default">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </button>
+          </div>
+        </div>
+      </div> <!-- acaba os pratos -->
+
+    </section>
   </main>
 </body>
 </html>
