--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav id="navBar">
       <i id="nav-logo" class="fa-solid fa-burger"> FOOD</i>
       <ul id="nav-list">
-        <li class="nav-item active"><a href="#inicio">Início <i class="fa-solid fa-house"></i></a></li>
+        <li class="nav-item active"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
         <li class="nav-item"><a href="#avalia">Avaliações <i class="fa-regular fa-chart-bar"></i></a></li>
       </ul>
@@ -28,13 +28,14 @@
 
     <div id="mobile-menu">
        <ul id="menu-nav-list"></ul>
-        <li class="menu-nav-item"><a href="#inicio">Início <i class="fa-solid fa-house"></i></a></li>
+        <li class="menu-nav-item"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="menu-nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
         <li class="menu-nav-item"><a href="#avalia">Avaliações <i class="fa-regular fa-chart-bar"></i></a></li>
       </ul>
       <button id="btn-mobile" class="btn-default">Peça aqui!<i class='bx bxs-food-menu bx-tada'></i></button>
     </div>
   </header>
+
   <main id="content">
     <section id="home">
       <div class="shape"></div>
@@ -62,7 +63,7 @@
       </div>
     </section>
 
-    <section id="menu">
+    <section id="cardapio">
       <h2 class="section-title">Cardápio</h2>
       <h3 class="section-subtitle">Nossos pratos especiais</h3>
 
@@ -165,6 +166,70 @@
       </div> <!-- acaba os pratos -->
 
     </section>
+
+    <section id="avalia">
+      <img class="img-chef" src="img/chef.png" alt="">
+      <div id="avalia_content">
+        <h2 class="section-title">Avaliações</h2>
+        <h3 class="section-subtitle">O que os clientes falam sobre nós</h3>
+
+        <div id="feedbacks">
+          <div class="feedback">
+            <img class="img-avatar" src="img/avatar.png" alt="">
+            <div class="feedbackContent">
+              <p>
+                Fulano
+                <span class="prato-avali">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </span>
+              </p>
+              <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maxime."</p>
+            </div>
+          </div>
+          <div class="feedback">
+            <img class="img-avatar" src="img/avatar.png" alt="">
+            <div class="feedbackContent">
+              <p>
+                Fulano
+                <span class="prato-avali">
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
+              </span>
+              </p>
+              <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, maxime."</p>
+            </div>
+          </div>
+        </div>
+
+        <button class="btn-default">
+          Ver mais avaliações <i class="fa-solid fa-arrow-up-right-from-square"></i>
+        </button>
+      </div>
+    </section>
+
+    <footer>
+      <img src="img/wave2.svg" alt="">
+
+      <div id="footer_items">
+        <span id="copy">
+          &copy; 2024 Luís Martins
+        </span>
+        <div class="social-media-btn">
+            <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
+
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+
+            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          </div>
+      </div>
+    </footer>
   </main>
 </body>
 </html>
