terminei o site e adicionei animação no scroll

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/estilo.css">
   <link rel="stylesheet" href="css/responsive.css">
   <script src="script.js" defer></script>
+  <script src="https://unpkg.com/scrollreveal"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -16,7 +17,7 @@
     <nav id="navBar">
       <i id="nav-logo" class="fa-solid fa-burger"> FOOD</i>
       <ul id="nav-list">
-        <li class="nav-item active"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
+        <li class="nav-item"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
         <li class="nav-item"><a href="#avalia">Avaliações <i class="fa-regular fa-chart-bar"></i></a></li>
       </ul>
@@ -27,7 +28,7 @@
     </nav>
 
     <div id="mobile-menu">
-       <ul id="menu-nav-list"></ul>
+       <ul id="menu-nav-list">
         <li class="menu-nav-item"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="menu-nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
         <li class="menu-nav-item"><a href="#avalia">Avaliações <i class="fa-regular fa-chart-bar"></i></a></li>
