ajeitei a header mobile

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </nav>
 
     <div id="mobile-menu">
-       <ul id="menu-nav-list">
+       <ul id="menu-nav-list"></ul>
         <li class="menu-nav-item"><a href="#home">Início <i class="fa-solid fa-house"></i></a></li>
         <li class="menu-nav-item"><a href="#cardapio">Cardápio <i class="fa-solid fa-rectangle-list"></i></a></li>
         <li class="menu-nav-item"><a href="#avalia">Avaliações <i class="fa-regular fa-chart-bar"></i></a></li>
