--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="home">
       <div class="shape"></div>
         <div id="cta">
-          <h1>O sabor vai até <span>você</span></h1>
+          <h1>O <span>sabor</span> vai até <span>você</span></h1>
           <p class="description">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, illum culpa expedita ratione debitis maiores et similique sit.
           </p>
